--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include _head.html %}
+{% include analytics.html %}
 </head>
 
 <body class="page">
